--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ a {
 <pre>
 <strong>Kenneth Forsbäck</strong> (<a href="https://spootiful.com/">spootiful.com</a>) &#60;<a href="mailto:spootiful@spootiful.com">spootiful@spootiful.com</a>&#62; (Finland)
 
-<em>Ostrobothnian, heathen, and gamer. An amateur designer and engineer in gaming and computing, with specialisation in system design. A native expert, with specialisation in linguistics.</em>
+<em>An Ostrobothnian, heathen, and gamer. An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking). A native expert, with specialisation in linguistics.</em>
 
 <img src="files/profile1.jpg">
 
