--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@ a {
 
 <!-- pre -->
 <pre>
+<em>A messy slapdash page (that I might or might not update) until I have my domain (DONE), hosting (DONE), and web programming (WIP) sorted out.</em>
+
 <strong>Kenneth Forsbäck</strong> (<a href="https://spootiful.com/">spootiful.com</a>) &#60;<a href="mailto:spootiful@spootiful.com">spootiful@spootiful.com</a>&#62; (Finland)
 
-<em>An Ostrobothnian, heathen, and gamer. An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking). A native expert, with specialisation in linguistics.</em>
+<em>An Ostrobothnian born 1985 among forests and meadows, a heathen since 2012 (the seed was planted in 2005), and a life-long gamer.
+
+<em>An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking), with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
 <img src="files/profile1.jpg">
 
