--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@ a {
 
 <em>An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking), with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
+<ul>
+
+<li><a href="https://www.spootiful.com/">Spootiful</a></li>
+<li><a href="https://www.youtube.com/@Spootiful">Spootiful @ YouTube</a></li>
+<li><a href="https://www.twitch.com/Spootiful">Spootiful @ Twitch</a></li>
+<li><a href="https://www.steamcommunity.com/profiles/76561197987593148">Spootiful @ Steam</a></li>
+<li><a href="https://www.steamcommunity.com/profiles/76561198356317046">Spootiful @ Steam</a></li>
+<li><a href="https://www.gog.com/u/aspootifulmind">Spootiful @ GOG</a></li>
+<li><a href="https://www.gog.com/u/spootiful">Spootiful @ GOG</a></li>
+<li><a href="">Spootiful @ IRC</a></li>
+<li><a href="">Spootiful @ XMPP</a></li>
+<li><a href="https://www.discordapp.com/users/1017409939045613588">Spootiful @ Discord</a></li>
+
+</ul>
+
 <img src="files/profile1.jpg">
 
 <strong>Projects</strong>
