--- a/index.html
+++ b/index.html
@@ -57,20 +57,16 @@ a {
 
 <em>An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking), with specialisation in system design. A native expert, with specialisation in linguistics.</em>
 
-<ul>
-
-<li><a href="https://www.spootiful.com/">Spootiful</a></li>
-<li><a href="https://www.youtube.com/@Spootiful">Spootiful @ YouTube</a></li>
-<li><a href="https://www.twitch.com/Spootiful">Spootiful @ Twitch</a></li>
-<li><a href="https://www.steamcommunity.com/profiles/76561197987593148">Spootiful @ Steam</a></li>
-<li><a href="https://www.steamcommunity.com/profiles/76561198356317046">Spootiful @ Steam</a></li>
-<li><a href="https://www.gog.com/u/aspootifulmind">Spootiful @ GOG</a></li>
-<li><a href="https://www.gog.com/u/spootiful">Spootiful @ GOG</a></li>
-<li><a href="">Spootiful @ IRC</a></li>
-<li><a href="">Spootiful @ XMPP</a></li>
-<li><a href="https://www.discordapp.com/users/1017409939045613588">Spootiful @ Discord</a></li>
-
-</ul>
+<a href="https://www.spootiful.com/">Spootiful (2024)</a>
+<a href="https://www.youtube.com/@Spootiful">Spootiful (2010) @ YouTube</a>
+<a href="https://www.twitch.com/Spootiful">Spootiful (2017) @ Twitch</a>
+<a href="https://www.steamcommunity.com/profiles/spootifulcom">Spootiful (2007) @ Steam</a>
+<a href="https://www.steamcommunity.com/profiles/aspootifulmind">Spootiful (2016) @ Steam</a>
+<a href="https://www.gog.com/u/aspootifulmind">Spootiful (2013) @ GOG</a>
+<a href="https://www.gog.com/u/spootiful">Spootiful (2011) @ GOG</a>
+Spootiful @ IRC
+Spootiful @ XMPP
+<a href="https://www.discordapp.com/users/1017409939045613588">Spootiful (2022) @ Discord</a>
 
 <img src="files/profile1.jpg">
 
