--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@ a {
 
 <strong>Kenneth Forsbäck</strong> (<a href="https://spootiful.com/">spootiful.com</a>) &#60;<a href="mailto:spootiful@spootiful.com">spootiful@spootiful.com</a>&#62; (Finland)
 
-<em>An Ostrobothnian born 1985 among forests and meadows, a heathen since at least 2012 (the seed was planted in 2005), and a life-long gamer.
+An Ostrobothnian born 1985 among forests and meadows, a heathen since at least 2012 (the seed was planted in 2005), and a life-long gamer.
 
-<em>An amateur professional. A designer and engineer in arts (gaming and storying) and science (computing and networking), with specialisation in system design. A native expert, with specialisation in linguistics.</em>
+An amateur professional in game design, computer engineering, and linguistics since 2000-2001 and something that I started experimenting with in the 90s. A life-long gamer and nerd born 1985 in Ostrobothnia. A proud heathen since 2012 and a seed that was planted in 2005.
+
+Spootiful (an alias I first used in 2010) was inspired by "spoot" from The Angry Beavers and (for me) means something silly, free-spirited, yet resilient, to be able to endure the hardships and the weight of life and still keep on smiling. The episode "It's A Spootiful Life" also deals with the burden of life.
+
+The earlier A Spootiful Mind (“is a terrible thing to lose”) is a blending with Beautiful Mind (2001) and Eternal Sunshine of the Spotless Mind (2004), referring to introspection, insight, having a curious mind, embracing your thread of fate, as well as to the beautifully vast sky of stars that make up my imaginative mind. Truly a terrible thing to lose!
 
 <a href="https://www.spootiful.com/">Spootiful (2024)</a>
 <a href="https://www.youtube.com/@Spootiful">Spootiful (2010) @ YouTube</a>
