--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ The earlier A Spootiful Mind (“is a terrible thing to lose”) is a blending w
 <a href="https://www.gog.com/u/spootiful">Spootiful (2011) @ GOG</a>
 <a href="https://www.gog.com/u/aspootifulmind">Spootiful (2013) @ GOG</a>
 Spootiful @ IRC
-Spootiful @ XMPP
+<a href="xmpp:spootiful@xabber.org">Spootiful (2024) @ XMPP</a>
 <a href="https://www.discordapp.com/users/1017409939045613588">Spootiful (2022) @ Discord</a>
 
 <img src="files/profile1.jpg">
