--- a/index.html
+++ b/index.html
@@ -61,13 +61,14 @@ Spootiful (an alias I first used in 2010) was inspired by "spoot" from The Angry
 
 The earlier A Spootiful Mind (“is a terrible thing to lose”) is a blending with Beautiful Mind (2001) and Eternal Sunshine of the Spotless Mind (2004), referring to introspection, insight, having a curious mind, embracing your thread of fate, as well as to the beautifully vast sky of stars that make up my imaginative mind. Truly a terrible thing to lose!
 
-<a href="https://www.spootiful.com/">Spootiful (2024)</a>
+<a href="https://www.spootiful.com/">Spootiful (2024) (Site)</a>
+<a href="mailto:spootiful@spootiful.com">Spootiful (2024) (Mail)</a>
 <a href="https://www.youtube.com/@Spootiful">Spootiful (2010) @ YouTube</a>
 <a href="https://www.twitch.com/Spootiful">Spootiful (2017) @ Twitch</a>
-<a href="https://www.steamcommunity.com/profiles/itsaspootifullife">Spootiful (2007) @ Steam</a>
-<a href="https://www.steamcommunity.com/profiles/aspootifulmind">Spootiful (2016) @ Steam</a>
+<a href="https://www.steamcommunity.com/profiles/itsaspootifullife">It's a Spootiful Life (2007) @ Steam</a>
+<a href="https://www.steamcommunity.com/profiles/aspootifulmind">A Spootiful Mind (2016) @ Steam</a>
 <a href="https://www.gog.com/u/spootiful">Spootiful (2011) @ GOG</a>
-<a href="https://www.gog.com/u/aspootifulmind">Spootiful (2013) @ GOG</a>
+<a href="https://www.gog.com/u/aspootifulmind">A Spootiful Mind (2013) @ GOG</a>
 Spootiful @ IRC
 <a href="xmpp:spootiful@xabber.org">Spootiful (2024) @ XMPP</a>
 <a href="https://www.discordapp.com/users/1017409939045613588">Spootiful (2022) @ Discord</a>
